[cdb] Fix flags popup going out of bounds

--- a/bin/style.less
+++ b/bin/style.less
@@ -31,6 +31,9 @@ body {
 	padding : 0;
 	background-color : black;
 	user-select:none;
+
+	max-width: 100vw;
+	max-height: 100vh;
 }
 
 .lm_header .lm_tab {
